--- a/Armada/Armada/Properties/launchSettings.json
+++ b/Armada/Armada/Properties/launchSettings.json
@@ -1,16 +1,18 @@
 ﻿{
+  "$schema": "http://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false, 
     "anonymousAuthentication": true, 
     "iisExpress": {
-      "applicationUrl": "http://localhost:55277",
-      "sslPort": 44311
+      "applicationUrl": "http://localhost:60461",
+      "sslPort": 44339
     }
   },
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
+      "launchUrl": "api/values",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -18,6 +20,7 @@
     "Armada": {
       "commandName": "Project",
       "launchBrowser": true,
+      "launchUrl": "api/values",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
