--- a/Armada/Armada/appsettings.json
+++ b/Armada/Armada/appsettings.json
@@ -4,9 +4,5 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "mailSettings": {
-    "mailToAddress": "test@gmail.com",
-    "mailFromAddress": "destinataire@gmail.com"
-  }
+  "AllowedHosts": "*"
 }
